tests/valid/57551_wildcard_print_binding/ildcard_print_binding.mag
-- Author: 57551, Eduardo Proença

-- `print(...)` returns Unit which can be bound to `_` wildcards

fun main (_) : Unit -> Unit =
    var _ : Unit = print(111);
    var _ : Unit = print(222);
    unit