tests/invalid-syntax/57551_string_not_closed/string_not_closed.mag
-- Author: 57551, Eduardo Proença

-- String literal missing closing `"`)

fun main (_) : Unit -> Unit = print("hello)